# emAI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: runtime_settings.py  settings.py
docs/graph/: GRAPH_REPORT.md  graph.html  graph.json
prompts/: classify_priority.md  summarize_executive.md
src/: __init__.py  main.py
src/ai/: classifier.py  llm_client.py  summarizer.py
src/core/: orchestrator.py
src/email_client/: base.py  gmail_imap.py  parser.py
src/messaging/: evolution_api.py  formatter.py  whatsapp_twilio.py
src/storage/: audit.py  credentials.py  crypto.py  models.py  state.py  user_settings.py
src/ui/: admin_tab.py  app.py  user_tab.py  validators.py
src/utils/: logger.py
supabase/: README.md
supabase/migrations/: 20260416120000_init_processed_emails.sql  20260417120000_user_credentials.sql  20260417130000_system_audit_logs.sql  20260417140000_evolution_api.sql
tests/: conftest.py
tests/fixtures/: html_heavy.eml  simple.eml  with_attachment.eml
tests/integration/: test_ai.py  test_email_client.py  test_main.py  test_messaging.py  test_orchestrator.py  test_storage.py
